# linked_list_implementation

./: .gitignore  CMakeLists.txt  README.md  cli.sh
inc/: linked_lists.h  main.h
src/: linked_lists.c  main.c
